APPDEV-5557: fixing alignment and arrows in HMB cart section
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@60544 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/global/standingorder.css
+++ b/projects/Media/docroot/assets/css/global/standingorder.css
@@ -187,13 +187,7 @@
 		height: auto !important;
 		margin: 0 !important;
 	}
-	.thxgiving-addtocart .quantity_minus, .thxgiving-addtocart .quantity_plus {
-		margin-top: 0;
-	}
-	.thxgiving-addtocart input.qty {
-		line-height: 17px !important;
-		height: 38px !important;
-	}
+
 	.qs-content .lineitems22 .itemlist-item-controls.smaller {
 		width: 264px;
 	}
